--- a/resources/sass/_Item.scss
+++ b/resources/sass/_Item.scss
@@ -16,51 +16,51 @@
     }
     &.users {
       min-width: 300px;
-      &:hover {
-        background-color: #ffffff;
-        color: $PrimaryColor;
-        transition: all 0.5s ease;
-      }
+      // &:hover {
+      //   background-color: #ffffff;
+      //   color: $PrimaryColor;
+      //   transition: all 0.5s ease;
+      // }
     }
     &.point {
       width: 100px;
-      &:hover {
-        background-color: #ffffff;
-        color: $PrimaryColor;
-        transition: all 0.5s ease;
-      }
+      // &:hover {
+      //   background-color: #ffffff;
+      //   color: $PrimaryColor;
+      //   transition: all 0.5s ease;
+      // }
     }
     &.score {
       width: 100px;
-      &:hover {
-        background-color: #ffffff;
-        color: $PrimaryColor;
-        transition: all 0.5s ease;
-      }
+      // &:hover {
+      //   background-color: #ffffff;
+      //   color: $PrimaryColor;
+      //   transition: all 0.5s ease;
+      // }
     }
     &.times {
       width: 100px;
-      &:hover {
-        background-color: #ffffff;
-        color: $PrimaryColor;
-        transition: all 0.5s ease;
-      }
+      // &:hover {
+      //   background-color: #ffffff;
+      //   color: $PrimaryColor;
+      //   transition: all 0.5s ease;
+      // }
     }
     &.ratio {
       width: 100px;
-      &:hover {
-        background-color: #ffffff;
-        color: $PrimaryColor;
-        transition: all 0.5s ease;
-      }
+      // &:hover {
+      //   background-color: #ffffff;
+      //   color: $PrimaryColor;
+      //   transition: all 0.5s ease;
+      // }
     }
     &.count {
       width: 100px;
-      &:hover {
-        background-color: #ffffff;
-        color: $PrimaryColor;
-        transition: all 0.5s ease;
-      }
+      // &:hover {
+      //   background-color: #ffffff;
+      //   color: $PrimaryColor;
+      //   transition: all 0.5s ease;
+      // }
     }
   }
 }
