--- a/resources/sass/_Config.scss
+++ b/resources/sass/_Config.scss
@@ -6,6 +6,7 @@ $BackColor: #ededed;
 $ChangeColor: #f5f5f5;
 $WhiteColor: #fff;
 $BlueColor: #80bcff;
+$LinkColor: #0033cc;
 $BaseColor: #dfe7f1;
 $Main1: #d3e5f7;
 $Main2: #a0c3e5;
